# KIV

./: .gitignore  CMakeLists.txt  KomicViewer.cpp  KomicViewer.h  KomicViewer.pro  PictureItem.cpp  PictureItem.h  PictureItemRaster.h  README.md  archive_item.cpp  archive_item.h  archive_model.cpp  archive_model.h  cmake-defaults.txt  defaults.pri  fileinfo.cpp  fileinfo.h  generatethumbnail.cpp  generatethumbnail.h  helper.cpp  helper.h  index.html  kiv.pro  kiv.qbs  kiv.qrc  kiv.rc  komicviewer.qrc  komicviewer.rc  komicviewer_enums.cpp  komicviewer_enums.h  loadpixmap.cpp  loadpixmap.h  main.cpp  main_window.cpp  main_window.h  mingw.cmake  model_archive.cpp  model_archive.h  model_files.cpp  model_files.h  (+43 more)
app/: CMakeLists.txt  app.pro  kiv_app.qbs  main.cpp
kiv/: CMakeLists.txt  icons.qrc  kiv.pro
kiv/include/: IArchiveExtractor.h  IPictureLoader.h
kiv/src/: archiveextractor.cpp  archiveextractor.h  enums.h  fileinfo.cpp  fileinfo.h  helper.cpp  helper.h  main.cpp  picture_loader.cpp  picture_loader.h  polyfill.h  settings.cpp  settings.h
kiv/src/models/: archive_item.cpp  archive_item.h  archive_model.cpp  archive_model.h  filesystem_model.cpp  filesystem_model.h  modelwrapper.cpp  modelwrapper.h
kiv/src/models/unrar/: archive_rar.cpp  archive_rar.h  unrar.h
kiv/src/widgets/: main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  urlnavigator.cpp  urlnavigator.h  zoom_widget.cpp  zoom_widget.h
kiv/src/widgets/files_view/: fileviewwithproxy.cpp  fileviewwithproxy.h  ifileview.h  sortcombobox.cpp  sortcombobox.h  thumbnailitemdelegate.cpp  thumbnailitemdelegate.h  view_archive_dirs.cpp  view_archive_dirs.h  view_files.cpp  view_files.h  view_files_list.cpp  view_files_list.h  view_files_tree.cpp
kiv/src/widgets/picture_item/: pictureitem.cpp  pictureitem.h  pictureitem_data.cpp  pictureitem_data.h  pictureitem_gl.cpp  pictureitem_gl.h  teximg.h  (+4 more)
kiv_tests/: CMakeLists.txt  fixtures.cpp  fixtures.h  init_test_data.cpp  init_test_data.h  kiv_tests.cpp  kiv_tests.pro  test_archive_file_list.cpp  test_archive_file_list.h  test_archive_files.cpp  test_archive_files.h  test_picture_item_raster.cpp  test_picture_item_raster.h  test_pictureitem_data.cpp  test_pictureitem_data.h  test_settings_bookmarks.cpp  test_settings_bookmarks.h  test_zoom_widget.cpp  test_zoom_widget.h  test_zoom_widget_no_defaults.h
kiv_tests/assets/images/: RAR rar4 😷.rar  RAR rar5 😸.rar
src/: CMakeLists.txt  archive_item.cpp  archive_model.cpp  archive_model.h  archiveextractor.cpp  archiveextractor.h  dataloader.cpp  dataloader.h  enums.h  fileinfo.cpp  fileinfo.h  helper.cpp  helper.h  icons.qrc  kiv.pro  kiv_lib.qbs  main.cpp  main_window.cpp  main_window.h  picture_loader.cpp  picture_loader.h  pictureitem.cpp  pictureitem.h  pictureitem_gl.cpp  pictureitem_gl.h  pictureitem_interface.h  pictureitem_raster.cpp  pictureitem_raster.h  settings.cpp  settings.h  settings_dialog.h  settingsdata.h  src.pro  teximg.h  thumbnailitemdelegate.cpp  thumbnailitemdelegate.h  view_files.cpp
src/include/: IArchiveExtractor.h  IPictureLoader.h
src/kiv/: archive_item.cpp  archive_item.h  archive_model.cpp  archive_model.h  enums.h  fileinfo.cpp  fileinfo.h  helper.cpp  helper.h  kiv.pro  main.cpp  main_window.cpp  main_window.h  picture_loader.cpp  picture_loader.h  pictureitem.cpp  pictureitem.h  pictureitem_data.cpp  pictureitem_data.h  pictureitem_gl.cpp  pictureitem_gl.h  pictureitem_interface.h  pictureitem_raster.cpp  pictureitem_raster.h  settings.cpp  settings.h  teximg.cpp  teximg.h  thumbnailitemdelegate.cpp  view_files.cpp  view_files.h  view_files_tree.cpp
src/kiv/models/: archive_item.cpp  archive_item.h  archive_model.cpp  archive_model.h  filesystem_model.cpp  filesystem_model.h
src/kiv/unrar/: archive_rar.cpp  archive_rar.h  unrar.cpp  unrar.h
src/kiv/widgets/: location_widget.cpp  location_widget.h  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  urlnavigator.cpp  urlnavigator.h  zoom_widget.cpp  zoom_widget.h  zoomwidget.cpp  zoomwidget.h
src/kiv_tests/: kiv_tests.cpp  kiv_tests.pro  test_assets.qrc  test_pictureitem_data.cpp  test_pictureitem_data.h  test_settings_bookmarks.cpp  test_settings_bookmarks.h
src/models/: archive_item.cpp  archive_item.h  archive_model.cpp  archive_model.h  archivemodelhandler.cpp  archivemodelhandler.h  filesystem_model.cpp  modelwrapper.cpp  modelwrapper.h  nestedmodel.cpp  nestedmodel.h
src/models/unrar/: archive_rar.cpp  archive_rar.h
src/quazip/: quazip.pro  quazip.sln
src/quazip/quazip/: quazip.pro  quazip.sln  quazip.vcproj  run_moc.bat
src/unrar/: archive_rar.cpp  archive_rar.h
src/widgets/: main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  urlnavigator.cpp  urlnavigator.h  zoom_widget.cpp  zoom_widget.h
src/widgets/files_view/: fileviewwithproxy.cpp  fileviewwithproxy.h  ifileview.h  nodeidentifier.cpp  nodeidentifier.h  nodenavigator.cpp  nodenavigator.h  sortcombobox.cpp  sortcombobox.h  thumbnailitemdelegate.cpp  thumbnailitemdelegate.h  view_archive_dirs.cpp  view_archive_dirs.h  view_files.cpp  view_files.h  view_files_list.cpp  view_files_list.h  view_files_tree.cpp  view_files_tree.h  viewfilesunified.cpp  viewfilesunified.h
src/widgets/picture_item/: pictureitem.cpp  pictureitem.h  pictureitem_data.cpp  pictureitem_data.h  pictureitem_gl.cpp  pictureitem_gl.h  pictureitem_interface.h  pictureitem_raster.cpp  pictureitem_raster.h  teximg.cpp  teximg.h
src/zlib/: zconf.h  zlib.h
tests/: CMakeLists.txt  fixtures.h  init_test_data.cpp  init_test_data.h  kiv_tests.cpp  kiv_tests.qbs  test_archive_file_list.cpp  test_archive_file_list.h  test_archive_files.cpp  test_archive_files.h  test_assets.qrc  test_nodenavigator.cpp  test_nodenavigator.h  test_picture_item_raster.cpp  test_picture_item_raster.h  test_pictureitem_data.h  test_settings_bookmarks.cpp  test_settings_bookmarks.h  test_zoom_widget.cpp  test_zoom_widget.h  test_zoom_widget_no_defaults.cpp  test_zoom_widget_no_defaults.h  tests.pro
(+36 files in other folders)
